<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".export.ExportDataActivity">

    <ImageButton
        android:id="@+id/button_toBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_to_back_white"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_export_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:text="@string/Exportar_Meus_Dados"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_export_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_export_explicacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/Explicacao_Exportar_Dados"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_exportar_json"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/Exportar_em_JSON"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dashboard_card_bg"
        app:layout_constraintTop_toBottomOf="@id/text_export_explicacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_exportar_pdf"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/Exportar_em_PDF"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dashboard_card_bg"
        app:layout_constraintTop_toBottomOf="@id/button_exportar_json"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:indeterminateTint="@color/cyan"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/button_exportar_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_export_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/Preparando_Exportacao"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/progress_export"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
