<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.AlterPassword"
    android:background="@color/gray"
    android:padding="16dp"
    >

    <ImageButton
        android:id="@+id/button_toBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_to_back_white"
        android:background="@android:color/transparent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_current_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/Senha_Atual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_new_password_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/Nova_Senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_current_password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_new_password_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/Confirme_a_Nova_Senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_new_password_1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save_password"
        style="@style/Button"
        android:text="@string/Salvar_Alteracao"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_new_password_2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>